<resources>
    <string name="text_french" translatable="false">French</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_bangla" translatable="false">বাংলা</string>
    <string name="text_spanish" translatable="false">Spanish</string>
    <string name="action_settings">Pengaturan</string>
    <string name="suppliers">Suplier</string>
    <string name="customers">Pelanggan</string>
    <string name="pos">POS</string>
    <string name="expense">Pengeluaran</string>
    <string name="report">Laporan</string>
    <string name="all_orders">Semua Transaksi</string>
    <string name="all_sales">Semua Penjualan</string>
    <string name="daily">Harian</string>
    <string name="monthly">Bulanan</string>
    <string name="yearly">Tahunan</string>
    <string name="customer_name">Nama Pelanggan</string>
    <string name="customer_cell">Nomor Telepon</string>
    <string name="customer_email">Email Pelanggan</string>
    <string name="customer_address">Alamat Pelanggan</string>
    <string name="add_customer">Tambahkan Pelanggan</string>
    <string name="enter_customer_name">Masukan Nama Pelanggan</string>
    <string name="enter_customer_cell">Masukan Nomor Telepon</string>
    <string name="enter_customer_address">Masukan Alamat Pelanggan</string>
    <string name="customer_successfully_added">Penambahan Pelanggan Berhasil</string>
    <string name="all_customer">Semua Pelanggan</string>
    <string name="all_suppliers">Semua Suplier</string>
    <string name="add_suppliers">Tambahkan Supplier</string>
    <string name="enter_suppliers_name">Masukan Nama Supplier</string>
    <string name="enter_suppliers_contact_person_name">Enter Suppliers Contact Person Name</string>
    <string name="enter_suppliers_cell">Enter Suppliers Cell</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_suppliers_address">Enter Suppliers Address</string>
    <string name="suppliers_successfully_added">Suppliers Successfully Added</string>
    <string name="failed">Gagal</string>
    <string name="product_name_cannot_be_empty">Nama Produk tidak boleh kosong</string>
    <string name="product_code_cannot_be_empty">Kode Produk tidak boleh kosong</string>
    <string name="product_category_cannot_be_empty">Kategori produk tidak boleh kosong</string>
    <string name="product_sell_price_cannot_be_empty">Product sell price can\'t be empty!</string>
    <string name="product_supplier_cannot_be_empty">Product supplier can\'t be empty!</string>
    <string name="product_weight_cannot_be_empty">Product weight can\'t be empty!</string>
    <string name="product_successfully_added">Produk Berhasil Ditambahkan</string>
    <string name="something_went_wrong">Terjadi Kesalahan</string>
    <string name="add_product">Tambahkan Produk</string>
    <string name="product_details">Detail Produk</string>
    <string name="product_description">Deskripsi Produk</string>
    <string name="unit_product_sell_price">Harga Jual Satuan</string>
    <string name="product_sell_price">Harga Jual Produk</string>
    <string name="product_weight">Berat Produk</string>
    <string name="select_product_weight_unit">Pilih satuan berat</string>
    <string name="product_weight_unit">Satuan</string>
    <string name="select_supplier">Pilih Suplier</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="choose_product_image">Pilih Gambar Produk</string>
    <string name="year_2020">Tahun 2020</string>
    <string name="total_sales">Total Penjualan : </string>
    <string name="search_here">Cari disini...</string>
    <string name="no_order_found">Tidak ada pesanan ditemukan</string>
    <string name="no_product_found">Tidak ada produk yang ditemukan</string>
    <string name="submit_order">Kirim Pesanan</string>
    <string name="all_sales_report">Laporan semua penjualan</string>
    <string name="all_expense_report">Laporan semua pengeluaran</string>
    <string name="monthly_sales_graph">Grafik Penjualan Bulanan</string>
    <string name="monthly_expense_graph">Grafik Pengeluaran Bulanan</string>
    <string name="no_data_found">Tidak Ada Data</string>
    <string name="shop_information">Informasi Toko</string>
    <string name="shop_name">Nama Toko</string>
    <string name="shop_contact_number">Nomor Telepon</string>
    <string name="shop_email">Email Toko</string>
    <string name="shop_address">Alamat Toko</string>
    <string name="edit">Edit</string>
    <string name="update_information">Update Informasi</string>
    <string name="product_category">Kategori Produk</string>
    <string name="cancel">Cancel</string>
    <string name="payment">Pembayaran</string>
    <string name="submit">SUBMIT</string>
    <string name="add_to_cart">Tambahkan</string>
    <string name="product_name">Nama Produk</string>
    <string name="weight">Berat:</string>
    <string name="price">Harga</string>
    <string name="supplier_name">Nama Suplier</string>
    <string name="supplier_contact_person">Kontak Person Suplier</string>
    <string name="supplier_cell">Kontak Suplier</string>
    <string name="supplier_email">Email Suplier</string>
    <string name="supplier_address">Alamat Suplier</string>
    <string name="add_supplier">Tambah Suplier</string>
    <string name="monthly_expense_in_graph">Grafik Laporan Pengeluaran</string>
    <string name="year">Tahun</string>
    <string name="monthly_expense_report">Laporan Pengeluaran Bulanan</string>
    <string name="total_expense">Total Pengeluaran: </string>
    <string name="monthly_sales_report">Laporan Penjualan Bulanan</string>
    <string name="all_expense">Semua Pengeluaran</string>
    <string name="yes">Ya</string>
    <string name="all_product">All Product</string>
    <string name="product_cart">Keranjang</string>
    <string name="no_product_in_cart">Tidak Ada Produk</string>
    <string name="select_payment_method">Pilih Pembayaran</string>
    <string name="select_order_type">Tipe Pesanan</string>
    <string name="select_customer">Pilih Pelanggan</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="order_details">Detail Pesanan</string>
    <string name="total_price">Total Harga: </string>
    <string name="add_expense">Tambahkan Biaya</string>
    <string name="product_removed_from_cart">Produk dihilangkan dari keranjang</string>
    <string name="backup_completed_successfully">Pencadangan Berhasil</string>
    <string name="unable_to_backup_database_retry">Pencadangan gagal. Ulangi</string>
    <string name="database_Import_completed">Pengambilan data berhasil</string>
    <string name="unable_to_import_database_retry">Unable to import database. Retry</string>
    <string name="want_to_delete_customer">Ingin Menghapus Pelanggan?</string>
    <string name="customer_deleted">Pelanggan telah dihapus</string>
    <string name="note">Catatan: </string>
    <string name="want_to_delete_expense">Ingin Menghapus Pengeluaran?</string>
    <string name="expense_deleted">Pengeluaran telah dihapus</string>
    <string name="payment_method">Metode Pembayaran:</string>
    <string name="want_to_delete_supplier">Yakin, Menghapus suplier?</string>
    <string name="supplier_deleted">Supplier Deleted</string>
    <string name="quantity">Jumlah:</string>
    <string name="sell_price">Harga Jual:</string>
    <string name="want_to_delete_product">Want to Delete Product ?</string>
    <string name="product_deleted">Produk dihapus</string>
    <string name="product_added_to_cart">Produk ditambahkan ke keranjang</string>
    <string name="product_already_added_to_cart">Produk telah berada di keranjang</string>
    <string name="product_added_to_cart_failed_try_again">Produk gagal ditambahkan ke keranjang, Coba lagi</string>
    <string name="press_once_again_to_exit">Tekan sekali lagi untuk keluar</string>
    <string name="order_deleted">Pesanan telah dihapus</string>
    <string name="want_to_delete_order">Ingin menghapus pesanan?</string>
    <string name="type_something_to_search">Type something to search</string>
    <string name="expense_name_cannot_be_empty">Nama Pengeluaran tidak boleh kosong</string>
    <string name="expense_amount_cannot_be_empty">Pengeluaran tidak boleh kosong</string>
    <string name="expense_successfully_added">Pengeluaran berhasil ditambahkan</string>
    <string name="qr_barcode_scanner">QR or Barcode Scanner</string>
    <string name="camera_permission">Membutuhkan Ijin Akses Kamera</string>
    <string name="error">Error</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="open_pdf">Open PDF</string>
    <string name="open_with_external_pdf_reader">Open with external pdf reader</string>
    <string name="generate_pdf_receipt">PDF Receipt</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_suppliers">Edit Suppliers</string>
    <string name="expense_name">Nama Pengeluaran</string>
    <string name="expense_note_if_any">Catatan (jika ada)</string>
    <string name="expense_note">Catatan Pengeluaran</string>
    <string name="expense_amount">Nominal Pengeluaran</string>
    <string name="expense_date">Tanggal Pengeluaran</string>
    <string name="expense_time">Jam Pengeluaran</string>
    <string name="edit_expense">Ubah Pengeluaran</string>
    <string name="update_successfully">Sukes mengupdate</string>
    <string name="categories">Kategori</string>
    <string name="category_name">Nama Kategori</string>
    <string name="payment_method_deleted">Payment Method Deleted</string>
    <string name="want_to_delete">Anda yakin menghapus ini?</string>
    <string name="all_payment_method">All Payment Method</string>
    <string name="payment_method_name">Payment Method Name</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="enter_payment_method_name">Enter Payment Method Name</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="update_payment_method">Update Payment Method</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="payment_methods">Metode Pembayaran</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Masukan password</string>
    <string name="logout">Logout</string>
    <string name="you_dont_have_permission_to_access_this_page">Akun anda tidak bisa mengakses ini</string>
    <string name="about_us">Tentang Kami</string>
    <string name="want_to_logout_from_app">Want to logout from app ?</string>
    <string name="delete">Hapus</string>
    <string name="tax">Pajak</string>
    <string name="tax_in_percentage">Persentase pajak(%)</string>
    <string name="total_tax">Total pajak</string>
    <string name="sub_total">Sub Total:</string>
    <string name="discount">Discount:</string>
    <string name="discount_cant_be_greater_than_total_price">Discount can\'t be greater than total price</string>
    <string name="net_sales">Net Sales</string>
    <string name="total_discount">Total Discount</string>
    <string name="table_number">Nomor Meja</string>
    <string name="order_success">Pesanan berhasil</string>
    <string name="order_successfully_done">Pesanan telah selesai</string>
    <string name="email">Email</string>
    <string name="please_wait">Silakan tunggu..</string>
    <string name="no_network_connection">Tidak ada koneksi internet</string>
    <string name="products">Produk</string>
    <string name="login">Login</string>
    <string name="selamat_datang" translatable="false">Selamat Datang</string>
    <string name="masukkan_email" translatable="false">Masukkan email dan password</string>
    <string name="email_input" translatable="false">Masukkan Email</string>
    <string name="input_password" translatable="false">Masukkan Password</string>
</resources>