<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueKakapos">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="155dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textAppearance="@style/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RelativeLayout
        android:id="@+id/filter_sort_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:background="@drawable/rectangle_rounded"
        android:elevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="top"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/selamat_datang"
            android:textAppearance="@style/title_heading1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="72dp"
            android:text="@string/masukkan_email"
            android:textAppearance="@style/title_heading2"
            android:gravity="top"
            />

        <EditText
            android:id="@+id/etxt_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/costum_input_text"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:drawablePadding="18dp"
            android:drawableTint="@android:color/black"
            android:hint="@string/email_input"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etxt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/costum_input_text"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="18dp"
            android:drawableTint="@android:color/black"
            android:hint="@string/input_password"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/lupa_passwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="232dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="218dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Lupa Password"
            android:textAppearance="@style/lupa_passwo"
            android:gravity="top|end"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/txt_login"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="259dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:backgroundTint="@color/yellowKakapos"
            android:text="masuk"
            android:textAppearance="@style/masuk"
            android:fontFamily="@font/poppins_semibold" />

        <TextView
            android:id="@+id/belum_punya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="72dp"
            android:layout_marginTop="313dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top|end"
            android:text="belum punya akun? "
            android:textAppearance="@style/belum_punya" />

        <TextView
            android:id="@+id/buat_akun_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/belum_punya"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="313dp"
            android:layout_marginEnd="73dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top|start"
            android:text="buat akun"
            android:textAppearance="@style/lupa_passwo" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>